🔧 Added .gitignore and removed test-output folder from repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
-target/
+# Ignore build/test artifacts
 test-output/
 allure-results/
+target/
 *.log
-*.class
+
+# IDE files
 *.iml
+.idea/
+*.class
+
+# OS-generated
 .DS_Store
+Thumbs.db
